--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-playwright==1.48.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+playwright==1.39.0
 python-multipart==0.0.6
 httpx==0.25.2
 typing-extensions==4.8.0
+greenlet==2.0.2
